# internal/handler/role/get_role_by_code_handler.go
@@ -3,22 +3,24 @@ package role
 import (
 	"net/http"
 
+	"github.com/colinrs/protohub/pkg/httpy"
+
 	"github.com/colinrs/protohub/internal/logic/role"
 	"github.com/colinrs/protohub/internal/svc"
 	"github.com/colinrs/protohub/internal/types"
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func GetRoleByIdHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func GetRoleByCodeHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.GetRoleByIdRequest
-		if err := httpx.Parse(r, &req); err != nil {
+		var req types.GetRoleByCodeRequest
+		if err := httpy.Parse(r, &req); err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 			return
 		}
 
-		l := role.NewGetRoleByIdLogic(r.Context(), svcCtx)
-		resp, err := l.GetRoleById(&req)
+		l := role.NewGetRoleByCodeLogic(r.Context(), svcCtx)
+		resp, err := l.GetRoleByCode(&req)
 		if err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 		} else {
